prep for navigation

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   </head>
 
   <body>
+    <header role="banner"></header>
       <nav role="navigation">
-       <ul>
+       <img src="/img/logo1.png" alt="yellow tulip flower logo ">
+        <ul>
          <li>HOME</li>
          <li>SERVICES</li>
           <ul>
@@ -22,10 +24,7 @@
          <li>CALL NOW</li>
        </ul> 
       </nav>
-      <header role="banner">
-        <h1>Business Connect Network</h1>
-        <h2>Connecting you to a business, packground image, and yada ydada</h2>
-      </header>
+    </header>
     <main role="main">
       <section>
         <p>Example of A serice</p>
