start over css from scratch

--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
   </head>
 
   <body>
-    <header role="banner"></header>
-      <nav role="navigation">
-       <img src="/img/logo1.png" alt="yellow tulip flower logo ">
-        <ul>
-         <li>HOME</li>
-         <li>SERVICES</li>
-          <ul>
-            <li>example</li>
+    <nav role="navigation" class="top-nav">
+      <img class="logo" src="/img/logo1.png" alt="yellow tulip flower logo ">
+      <ul>
+        <li><a href="#">home</a></li>
+        <li><a href="#">Service</a>
+          <ul class="dropdown-1">
+            <li><a href="#">example</a></li>
           </ul>
-         <li>ABOUT</li>
-         <li>CALL NOW</li>
-       </ul> 
-      </nav>
+        </li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Call now</a></li>
+      </ul> 
+    </nav>
+    <header role="banner" class="header">
+
     </header>
-    <main role="main">
-      <section>
-        <p>Example of A serice</p>
+    <main role="main" class="main">
+      <section class="service">
       </section>
     </main>
   </body>
