added navbar and structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Business Connect Network</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link <link href="https://fonts.googleapis.com/css?family=Concert+One|Merriweather+Sans" rel="stylesheet">
   </head>
 
   <body>
@@ -16,19 +17,22 @@
       <ul>
         <li><a href="#">home</a></li>
         <li><a href="#">Service</a>
-          <ul class="dropdown-1">
-            <li><a href="#">example</a></li>
-          </ul>
         </li>
         <li><a href="#">About</a></li>
         <li><a href="#">Call now</a></li>
       </ul> 
     </nav>
-    <header role="banner" class="header">
-
+    <header role="banner" class="banner-intro">
+      <h2>Connecting
+        YOU TO A BUSINESS
+      </h2>
     </header>
     <main role="main" class="main">
-      <section class="service">
+      <section role="region" class="services">
+        <h2>sample message</h2>
+      </section>
+      <section role="region" class="about">
+        <h2>about</h2>
       </section>
     </main>
   </body>
