--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
     <title>Business Connect Network</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link <link href="https://fonts.googleapis.com/css?family=Concert+One|Merriweather+Sans" rel="stylesheet">
+    <link link href="https://fonts.googleapis.com/css?family=Concert+One|Merriweather+Sans" rel="stylesheet">
   </head>
 
   <body>
-    <nav role="navigation" class="top-nav">
-      <img class="logo" src="/img/logo1.png" alt="yellow tulip flower logo ">
-      <ul>
-        <li><a href="#">home</a></li>
-        <li><a href="#">Service</a>
-        </li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Call now</a></li>
-      </ul> 
-    </nav>
-    <header role="banner" class="banner-intro">
-      <h2>Connecting
-        YOU TO A BUSINESS
-      </h2>
+    <header role="header" class="banner-intro">
+      <img class="logo" src="/img/logo-black.png" alt="yellow tulip flower logo ">
+      <input type="checkbox" id="nav-toggle" class="nav-toggle">
+      <nav role="navigation" class="top-nav">
+          <li><a href="#">home</a></li>
+          <li><a href="#">Service</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Call now</a></li>
+        </ul> 
+      </nav>
+      <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+       </label>
     </header>
     <main role="main" class="main">
       <section role="region" class="services">
