--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Business Connect Network</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link <link href="https://fonts.googleapis.com/css?family=Concert+One|Merriweather+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Concert+One|Merriweather+Sans" rel="stylesheet">
   </head>
 
   <body>
