added mobile first responsive features. still a lot of work to do with the navbar more menu and above 600px

--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
     <title>Business Connect Network</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Concert+One|Merriweather+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Righteous|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
+    <script src="app.js"></script>
     <nav role="navigation" class="top-nav">
-      <img class="logo" src="/img/logo1.png" alt="yellow tulip flower logo ">
-      <ul>
+      <img class="logo" src="/img/logo-black.png" alt="yellow tulip flower logo ">
+      <h1>BCN</h1>
+
+      <button onclick="menu()">MENU<i class="fa fa-caret-down"></i></button>
+
+      <ul id="menu-links" class="menu-links">
         <li><a href="#">home</a></li>
-        <li><a href="#">Service</a>
-        </li>
+        <li><a href="#">Services</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Call now</a></li>
-      </ul> 
+        <li class="call-now"><a href="#">Call now</a></li>
+      </ul>   
     </nav>
     <header role="banner" class="banner-intro">
       <h2>Connecting
