--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <button onclick="menu()">MENU<i class="fa fa-caret-down"></i></button>
 
       <ul id="menu-links" class="menu-links">
-        <li><a href="#">home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">About</a></li>
+        <li class="home"><a href="#">home</a></li>
+        <li class="services"><a href="#">Services</a></li>
+        <li class="about"><a href="#">About</a></li>
         <li class="call-now"><a href="#">Call now</a></li>
       </ul>   
     </nav>
