fixed nav. This is a good starting point

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   </head>
 
   <body>
-    <nav role="navigation">
+    <nav>
       <div class="top-nav">
         <h1>BCN</h1>
-        <h2><i class="fa fa-bars"></i></h2>  
+        <h2 id="navbar-toggle"><i class="fa fa-bars"></i></h2>  
       </div> 
       <div class="nav-menu">
-        <ul class="menu-links">
+        <ul id="menu-links" class="menu-links">
           <li><a href="#">home</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">About</a></li>
@@ -27,20 +27,18 @@
         </ul>   
       </div>  
     </nav>
-    <header role="banner" class="banner-intro">
-      <h2>connecting you to a business</h2>
+    <header class="banner-intro">
     </header>
-    <main role="main" class="main">
-      <section role="region" class="services">
+    <main class="main">
+      <section class="services">
         <h2>sample message</h2>
       </section>
-      <section role="region" class="about">
-        <h2>about</h2>
+      <section class="about">
       </section>
     </main>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
   </body>
-  <footer role="contentinfo">
+  <footer>
 
   </footer>
   </html>
