--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       </div>  
     </nav>
     <header class="banner-intro">
+      <h2>connecting <br> you to <br> a business</h2>
+      <img class="logo" src="/img/logo-white.png">
+      <p>We are in the business of connecting you to different businesses through Networking. It is a fantastic way of meeting new busines professionals and a great way to expand your network.</p>
+      <span><i class="fa fa-angle-down"></i></span>
     </header>
     <main class="main">
       <section class="services">
