beautified header section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Righteous|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   </head>
 
   <body>
@@ -21,16 +22,17 @@
       <div class="nav-menu">
         <ul id="menu-links" class="menu-links">
           <li><a href="#">home</a></li>
-          <li><a href="#">Services</a></li>
           <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
           <li class="call-now"><a href="#">Call now</a></li>
         </ul>   
       </div>  
     </nav>
     <header class="banner-intro">
+      <p class="header-title">Business Network Connect</p>
       <h2>connecting <br> you to <br> a business</h2>
       <img class="logo" src="/img/logo-white.png">
-      <p>We are in the business of connecting you to different businesses through Networking. It is a fantastic way of meeting new busines professionals and a great way to expand your network.</p>
+      <p class="header-description">We are in the business of connecting you to different businesses through Networking. It is a fantastic way of meeting new business professionals and a great way to expand your network.</p>
       <span><i class="fa fa-angle-down"></i></span>
     </header>
     <main class="main">
