--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
         </ul>   
       </div>  
     </nav>
-    <header class="banner-intro">
-      <p class="header-title">Business Network Connect</p>
-      <h2>connecting <br> you to <br> a business</h2>
-      <img class="logo" src="/img/logo-white.png">
-      <p class="header-description">We are in the business of connecting you to different businesses through Networking. It is a fantastic way of meeting new business professionals and a great way to expand your network.</p>
+    <header>
       <span><i class="fa fa-angle-down"></i></span>
+      <div class="banner-intro">
+        <p class="header-title">Business Network Connect</p>
+        <h2>connecting <br> you to <br> a business</h2>
+        <img class="logo" src="/img/logo-white.png">
+        <p class="header-description">We are in the business of connecting you to different businesses through Networking. It is a fantastic way of meeting new business professionals and a great way to expand your network.</p>
+      </div>
     </header>
     <main class="main">
       <section class="services">
