changing viewport priority from mobile first to desktop first

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </div> 
       <div class="nav-menu">
         <ul id="menu-links" class="menu-links">
-          <li><a href="#">home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
+          <li class="home"><a href="#">home</a></li>
+          <li class="about"><a href="#">About</a></li>
+          <li class="services"><a href="#">Services</a></li>
           <li class="call-now"><a href="#">Call now</a></li>
         </ul>   
       </div>  
@@ -32,7 +32,7 @@
       <span><i class="fa fa-angle-down"></i></span>
       <div class="banner-intro">
         <p class="header-title">Business Network Connect</p>
-        <h2>connecting <br> you to <br> a business</h2>
+        <h2>connecting<br>you to<br>a business</h2>
         <img class="logo" src="/img/logo-white.png">
         <p class="header-description">We are in the business of connecting you to different businesses through Networking. It is a fantastic way of meeting new business professionals and a great way to expand your network.</p>
       </div>
