--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
       <div class="top-nav">
         <h1>BCN</h1>
-        <h2 id="navbar-toggle"><i class="fa fa-bars"></i></h2>  
+        <span id="navbar-toggle"><i class="fa fa-bars"></i></span>  
       </div> 
       <div class="nav-menu">
         <ul id="menu-links" class="menu-links">
