added content in services section

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="description" content="Connecting you to a business">
+    <meta name="description" content="Business Network Connect. Connecting you to a business.">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald|Righteous|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">  
   </head>
 
   <body>
@@ -22,8 +23,8 @@
       <div class="nav-menu">
         <ul id="menu-links" class="menu-links">
           <li><a href="#">home</a></li>
-          <li><a href="#">About</a></li>
           <li><a href="#">Services</a></li>
+          <li><a href="#">About</a></li>
           <li class="call-now"><a href="#">Call now</a></li>
         </ul>   
       </div>  
@@ -39,7 +40,11 @@
     </header>
     <main class="main">
       <section class="services">
-        <h2>sample message</h2>
+        <p class="service-intro">Earn Extra Income With These Services</p>
+        <p class="service-description">Here at BCN, we love networking and we will continue to share various businesses and their product benefits through word of mouth which will also help generate additional income for you by connecting you to different networking businesses and their products in the market today that meet the needs of your customers NEEDS EDITING WORK NOT DONE</p>
+          <div class="services-content">
+
+          </div>
       </section>
       <section class="about">
       </section>
