--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
     <main class="main">
       <section class="services">
         <p class="service-intro">Earn Extra Income<br>With These Services</p>
-        <p class="intro-description">Here at BCN, we love networking and we will continue to share various businesses and their product benefits through word of mouth which will also help generate additional income for you by connecting you to different networking businesses and their products in the market today that meet the needs of your customers NEEDS EDITING WORK NOT DONE</p>
+        <p class="intro-description">We love networking and we will continue to share various businesses and their product benefits through word of mouth which will also help you generate additional income by connecting you various businesses that meet the needs of your customers.</p>
           <div class="services-content1">
-            <div>
+            <div class="servcard1">
               <img src="/img/logo-placeholder.jpg" alt="" class="service-logo">
               <p class="service-subtitle">Lorem Ipsum is simply dummy text of</p>
               <h3 class="service-title">Lifepharm</h3>
-              <p class="service-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesettin</p>
+              <p class="service-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
               <button type="button">Learn More</button>
             </div> 
-            <div>
+            <div class="servcard2">
               <img src="/img/logo-placeholder.jpg" alt="" class="service-logo">
               <p class="service-subtitle">Lorem Ipsum is simply dummy text of</p>
               <h3 class="service-title">Lifepharm</h3>
-              <p class="service-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesettin</p>
+              <p class="service-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem  </p>
 
               <button type="button">Learn More</button>
               </div> 
-            <div>
+            <div class="servcard3">
               <img src="/img/logo-placeholder.jpg" alt="" class="service-logo">
               <p class="service-subtitle">Lorem Ipsum is simply dummy text of</p>
               <h3 class="service-title">Lifepharm</h3>
-              <p class="service-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesettin</p>
+              <p class="service-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem  </p>
               <button type="button">Learn More</button>
             </div> 
           </div>
