--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <p class="service-subtitle">Lorem Ipsum is simply dummy text of</p>
               <h3 class="service-title">Lifepharm</h3>
               <p class="service-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-              <button type="button">Learn More</button>
+              <button type="button">MORE DETAILS</button>
             </div> 
             <div class="servcard2">
               <img src="/img/logo-placeholder.jpg" alt="" class="service-logo">
@@ -56,23 +56,37 @@
               <h3 class="service-title">Lifepharm</h3>
               <p class="service-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem  </p>
 
-              <button type="button">Learn More</button>
+              <button type="button">MORE DETAILS</button>
               </div> 
             <div class="servcard3">
               <img src="/img/logo-placeholder.jpg" alt="" class="service-logo">
               <p class="service-subtitle">Lorem Ipsum is simply dummy text of</p>
               <h3 class="service-title">Lifepharm</h3>
               <p class="service-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem  </p>
-              <button type="button">Learn More</button>
+              <button type="button">MORE DETAILS</button>
             </div> 
           </div>
       </section>
       <section class="about">
+        
       </section>
     </main>
     <script src="js/app.js"></script>
   </body>
   <footer>
+    <h2>Contact Us</h2>
+    <div class="email">
+      <h3>Email:</h3>
+      <p>cecilia.tantay@gmail.com</p>
+    </div>
+    <div class="location">
+      <h3>Location:</h3>
+      <p>Inside Seafood City Supermarket<br>16130 Nordhoff St. North Hills, CA 91343</p>
+    </div>
+    <div class="phone">
+      <h3>Phone:</h3>
+      <p>(626)435-6339</p>
+    </div>
 
   </footer>
   </html>
