--- a/index.html
+++ b/index.html
@@ -74,18 +74,39 @@
     <script src="js/app.js"></script>
   </body>
   <footer>
-    <h2>Contact Us</h2>
-    <div class="email">
-      <h3>Email:</h3>
-      <p>cecilia.tantay@gmail.com</p>
-    </div>
-    <div class="location">
-      <h3>Location:</h3>
-      <p>Inside Seafood City Supermarket<br>16130 Nordhoff St. North Hills, CA 91343</p>
-    </div>
-    <div class="phone">
-      <h3>Phone:</h3>
-      <p>(626)435-6339</p>
+    <div class="footer3column">
+      <div class="quicklinks">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><p>Home</p></li>
+          <li><p>Services</p></li>
+          <li><p>About</p></li>
+        </ul>  
+      </div>
+
+      <div class="footer-services">
+        <h3>Services</h3>
+        <ul>
+          <li><p>Entertainment</p></li>
+          <li><p>Products</p></li>
+          <li><p>Health</p></li>
+        </ul>
+      </div>
+              
+
+
+      <div class="getintouch">
+        <h3>Get in Touch</h3>
+        <ul>
+          <li class="location"><p>Inside Seafood City Supermarket<br>16130 Nordhoff St. North Hills, CA 91343</p></li>
+          <li class="email"><p>cecilia.tantay@gmail.com</p></li>
+          <li class="phone"><p>(626)435-6339</p></li>
+        </ul>  
+      </div>
+
+    <div class="footerbcn">
+      <h2>BCN</h2>
+      <p>Business Connect Network</p>
     </div>
 
   </footer>
