about section start

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
       </section>
       <section class="about">
-        
+        <h2>About section. Still don't know what I want this section to look like.</h2>
       </section>
     </main>
     <script src="js/app.js"></script>
