got rid of fixed header2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="banner-intro">
         <p class="header-title">Business Network Connect</p>
         <h2>connecting<br>you to<br>a business</h2>
-        <img class="logo" src="/img/logo-white.png">
+        <img class="logo" src="https://s3-us-west-1.amazonaws.com/bcn-business-connect/logo-white.png">
         <p class="header-description">We are in the business of connecting you to different businesses through networking. It is a fantastic way of meeting new business professionals and a great way to expand your network.</p>
       </div>
     </header>
