--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <div class="footerbcn">
       <h2>BCN</h2>
-      <p>Business Connect Network</p>
+      <p>&copy; 2018 Business Connect Network</p>
     </div>
 
   </footer>
